feat: integrate Supabase backend
- Add supabase_flutter dependency
- Create database migrations (profiles, matches, rankings, tournaments, friendships)
- Configure Supabase service and initialization
- Create auth data source
- Add Supabase configuration file
- Initialize Supabase in main.dart
- Add comprehensive Supabase setup documentation

All tables created with RLS policies and proper constraints.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   
   # HTTP requests
   http: ^1.1.2
+  
+  # Supabase
+  supabase_flutter: ^2.5.6
 
 dev_dependencies:
   flutter_test:
